Fixed issue with double tap on Safari zooming in

--- a/src/sass/base/_normalization.scss
+++ b/src/sass/base/_normalization.scss
@@ -55,6 +55,8 @@
 
         color-scheme: dark light;
         scrollbar-gutter: stable;
+
+        touch-action: manipulation;
     }
 
 
